--- a/Toolkit/ArcGISToolkit/LayerContentsTableViewController.storyboard
+++ b/Toolkit/ArcGISToolkit/LayerContentsTableViewController.storyboard
@@ -32,9 +32,9 @@
                                                 <constraint firstAttribute="width" secondItem="ENx-U2-2wK" secondAttribute="height" multiplier="1:1" id="cnz-WL-Gmt"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UYu-Ab-2C2">
-                                            <rect key="frame" x="36.5" y="0.0" width="369.5" height="20.5"/>
-                                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UYu-Ab-2C2">
+                                            <rect key="frame" x="36.5" y="0.5" width="369.5" height="19.5"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -66,9 +66,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qCc-Am-7U7">
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qCc-Am-7U7">
                                             <rect key="frame" x="46" y="11.5" width="303" height="20.5"/>
-                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -88,10 +88,20 @@
                                                 <action selector="accordianAction:" destination="gj6-Kb-3zF" eventType="touchUpInside" id="oQu-eA-hO1"/>
                                             </connections>
                                         </button>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QXC-nS-UuU" userLabel="SeparatorView">
+                                            <rect key="frame" x="8" y="2" width="406" height="1"/>
+                                            <color key="backgroundColor" systemColor="separatorColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.28999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="wqm-rJ-Thu"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="ihQ-ML-iVw" firstAttribute="leading" secondItem="eiZ-cd-Upr" secondAttribute="leading" constant="8" id="5D5-eq-j5c"/>
+                                        <constraint firstAttribute="trailing" secondItem="QXC-nS-UuU" secondAttribute="trailing" id="MTS-rr-8kc"/>
+                                        <constraint firstAttribute="top" secondItem="QXC-nS-UuU" secondAttribute="top" constant="-2" id="MpL-P8-Ujo"/>
                                         <constraint firstItem="qCc-Am-7U7" firstAttribute="leading" secondItem="ihQ-ML-iVw" secondAttribute="trailing" constant="8" id="RzK-Jw-2rS"/>
+                                        <constraint firstItem="QXC-nS-UuU" firstAttribute="leading" secondItem="eiZ-cd-Upr" secondAttribute="leading" constant="8" id="S96-aq-1hf"/>
                                         <constraint firstItem="qCc-Am-7U7" firstAttribute="centerY" secondItem="eiZ-cd-Upr" secondAttribute="centerY" id="YZb-uz-qkU"/>
                                         <constraint firstItem="ihQ-ML-iVw" firstAttribute="centerY" secondItem="eiZ-cd-Upr" secondAttribute="centerY" id="aay-C2-NVX"/>
                                         <constraint firstAttribute="trailing" secondItem="Qjr-f6-CC9" secondAttribute="trailing" constant="8" id="ePK-7G-znI"/>
@@ -104,6 +114,7 @@
                                     <outlet property="accordianButtonWidthConstraint" destination="pxE-W6-fcs" id="gpX-W2-wXc"/>
                                     <outlet property="indentationConstraint" destination="5D5-eq-j5c" id="F4o-tb-d5u"/>
                                     <outlet property="nameLabel" destination="qCc-Am-7U7" id="Rg1-24-oaQ"/>
+                                    <outlet property="separatorView" destination="QXC-nS-UuU" id="uUX-p9-BrB"/>
                                     <outlet property="visibilitySwitch" destination="Qjr-f6-CC9" id="49i-PM-IbO"/>
                                 </connections>
                             </tableViewCell>
@@ -116,14 +127,17 @@
                                     <subviews>
                                         <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ALc-1U-HGJ">
                                             <rect key="frame" x="8" y="7" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="30" id="84R-fp-uC3"/>
+                                            </constraints>
                                             <state key="normal" title="&gt;"/>
                                             <connections>
                                                 <action selector="accordianAction:" destination="bWm-du-xG7" eventType="touchUpInside" id="QNW-bA-Gmy"/>
                                             </connections>
                                         </button>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AOt-cv-VvJ">
+                                        <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AOt-cv-VvJ">
                                             <rect key="frame" x="46" y="11.5" width="303" height="20.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
@@ -133,21 +147,33 @@
                                                 <action selector="visibilityChanged:" destination="bWm-du-xG7" eventType="valueChanged" id="1Hu-IJ-Znx"/>
                                             </connections>
                                         </switch>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XHM-ef-iJu" userLabel="SeparatorView">
+                                            <rect key="frame" x="46" y="-2" width="303" height="1"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="1" id="Usu-9a-twz"/>
+                                            </constraints>
+                                        </view>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="ALc-1U-HGJ" firstAttribute="leading" secondItem="Bn6-3x-jb4" secondAttribute="leading" constant="8" id="02m-8h-ns5"/>
                                         <constraint firstItem="L0l-6H-Q5f" firstAttribute="centerY" secondItem="Bn6-3x-jb4" secondAttribute="centerY" id="10c-2A-NOT"/>
                                         <constraint firstItem="AOt-cv-VvJ" firstAttribute="trailing" secondItem="L0l-6H-Q5f" secondAttribute="leading" constant="-8" id="1SD-Gq-Deq"/>
+                                        <constraint firstItem="XHM-ef-iJu" firstAttribute="top" secondItem="Bn6-3x-jb4" secondAttribute="top" constant="-2" id="Ayg-En-uq5"/>
                                         <constraint firstItem="AOt-cv-VvJ" firstAttribute="centerY" secondItem="Bn6-3x-jb4" secondAttribute="centerY" id="D5o-eP-ME1"/>
+                                        <constraint firstItem="XHM-ef-iJu" firstAttribute="leading" secondItem="ALc-1U-HGJ" secondAttribute="trailing" constant="8" id="DQ9-Fh-7VV"/>
                                         <constraint firstAttribute="trailing" secondItem="L0l-6H-Q5f" secondAttribute="trailing" constant="8" id="EGU-Hk-Uqk"/>
+                                        <constraint firstItem="L0l-6H-Q5f" firstAttribute="leading" secondItem="XHM-ef-iJu" secondAttribute="trailing" constant="8" symbolic="YES" id="EwE-mL-Uac"/>
                                         <constraint firstItem="AOt-cv-VvJ" firstAttribute="leading" secondItem="ALc-1U-HGJ" secondAttribute="trailing" constant="8" id="WPf-Eu-D6j"/>
                                         <constraint firstItem="ALc-1U-HGJ" firstAttribute="centerY" secondItem="Bn6-3x-jb4" secondAttribute="centerY" id="hH6-4c-ZAI"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="accordianButton" destination="ALc-1U-HGJ" id="IOV-kr-Qsu"/>
+                                    <outlet property="accordianButtonWidthConstraint" destination="84R-fp-uC3" id="ILg-wO-F7g"/>
                                     <outlet property="indentationConstraint" destination="02m-8h-ns5" id="iHB-2A-9bx"/>
                                     <outlet property="nameLabel" destination="AOt-cv-VvJ" id="lhA-Ie-YCt"/>
+                                    <outlet property="separatorView" destination="XHM-ef-iJu" id="VsJ-ir-EfC"/>
                                     <outlet property="visibilitySwitch" destination="L0l-6H-Q5f" id="7aA-bR-4Ad"/>
                                 </connections>
                             </tableViewCell>
